log
Thu 16 May 2024 01:07:23 AM UTC: 
 tests:  0|5
total_score: 0/70
1425c0d
Thu 16 May 2024 01:26:16 AM UTC: 
 sudoku.c | 20 +++++++++++++++++++-
 1 file changed, 19 insertions(+), 1 deletion(-)
test.c: In function ‘get_adj_nodes’:
test.c:245:5: error: ‘main’ is normally a non-static function [-Werror=main]
  245 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:262:1: error: expected declaration or statement at end of input
  262 | }
      | ^
In file included from test.c:5:
sudoku.c:55:7: error: unused variable ‘aux’ [-Werror=unused-variable]
   55 |   int aux; //AUXILIAR PARA EL INTERCAMBIO DE VALORES
      |       ^~~
test.c:263: error: control reaches end of non-void function [-Werror=return-type]
At top level:
test.c:245:5: error: ‘main’ defined but not used [-Werror=unused-function]
  245 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:7:8: error: ‘_strdup’ defined but not used [-Werror=unused-function]
    7 | char * _strdup(const char * str) {
      |        ^~~~~~~
cc1: all warnings being treated as errors
Compilation failed
9f4afbd
Thu 16 May 2024 01:27:11 AM UTC: 
 sudoku.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  2|4
total_score: 15/70
0f4b463
Thu 16 May 2024 03:05:05 AM UTC: 
 sudoku.c | 13 ++++++++++++-
 1 file changed, 12 insertions(+), 1 deletion(-)
 tests:  5|3
total_score: 35/70
1536f3f
Thu 16 May 2024 03:06:20 AM UTC: 
 sudoku.c | 12 +++++++-----
 1 file changed, 7 insertions(+), 5 deletions(-)
In file included from test.c:5:
sudoku.c:60:3: error: expected identifier or ‘(’ before ‘}’ token
   60 |   }
      |   ^
sudoku.c:61:3: error: expected identifier or ‘(’ before ‘return’
   61 |   return 1;
      |   ^~~~~~
sudoku.c:62:1: error: expected identifier or ‘(’ before ‘}’ token
   62 | }
      | ^
sudoku.c: In function ‘is_valid’:
sudoku.c:59:5: error: control reaches end of non-void function [-Werror=return-type]
   59 |     }
      |     ^
cc1: all warnings being treated as errors
Compilation failed
ab35b1b
Thu 16 May 2024 03:06:44 AM UTC: 
 sudoku.c | 4 +---
 1 file changed, 1 insertion(+), 3 deletions(-)
 tests:  5|3
total_score: 35/70
a55bb4b
Thu 16 May 2024 03:07:35 AM UTC: 
 sudoku.c | 8 +++++++-
 1 file changed, 7 insertions(+), 1 deletion(-)
 tests:  6|2
total_score: 45/70
bf6c494
Thu 16 May 2024 03:08:33 AM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  6|2
total_score: 45/70
ca5bee0
Sun 19 May 2024 01:55:13 AM UTC: 
 sudoku.c | 25 +++++++++++++------------
 1 file changed, 13 insertions(+), 12 deletions(-)
 tests:  6|2
total_score: 45/70
32a90d5
Sun 19 May 2024 01:56:20 AM UTC: 
 sudoku.c | 50 ++++++++++++++++++++++++++++----------------------
 1 file changed, 28 insertions(+), 22 deletions(-)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:72:18: error: implicit declaration of function ‘is_in_list’ [-Werror=implicit-function-declaration]
   72 |             if (!is_in_list(list, adj)) {
      |                  ^~~~~~~~~~
sudoku.c: At top level:
sudoku.c:86:5: error: redefinition of ‘is_valid’
   86 | int is_valid(Node* n){
      |     ^~~~~~~~
sudoku.c:46:5: note: previous definition of ‘is_valid’ with type ‘int(Node *)’
   46 | int is_valid(Node* n){
      |     ^~~~~~~~
test.c: In function ‘test_isfinal’:
test.c:180:8: error: implicit declaration of function ‘is_final’ [-Werror=implicit-function-declaration]
  180 |     if(is_final(initial)){
      |        ^~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
2f965d3
Sun 19 May 2024 01:57:23 AM UTC: 
 sudoku.c | 50 ++++++++++++++++++++++----------------------------
 1 file changed, 22 insertions(+), 28 deletions(-)
 tests:  6|2
total_score: 45/70
70d918a
